--- a/about.html
+++ b/about.html
@@ -4,40 +4,79 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About | ExamBuddy</title>
-  <link rel="stylesheet" href="../project/css/about.css" />
+  <link rel="stylesheet" href="../css/about.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="toggle-container">
-    <label class="switch">
-      <input type="checkbox" id="darkModeToggle" />
-      <span class="slider"></span>
-    </label>
-  </div>
+  <!-- NAVBAR -->
+  <header class="navbar">
+    <div class="logo">Exam<span>Buddy</span></div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
+      <a href="#">Courses</a>
+      <a href="#">Contact</a>
+    </nav>
+    <div class="toggle-container">
+      <input type="checkbox" id="darkModeToggle">
+      <label for="darkModeToggle" class="toggle-switch"></label>
+    </div>
+  </header>
 
-  <section class="about-section">
-    <div class="container">
-      <h1 class="title">About ExamBuddy</h1>
-      <p class="description">
-        ExamBuddy is your go-to platform for simplified and high-quality NCERT notes. We aim to make learning accessible, organized, and stress-free. Whether you're revising for boards or just brushing up, ExamBuddy has your back.
-      </p>
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <h1>About ExamBuddy</h1>
+    <p>Your ultimate study companion for NCERT notes and beyond.</p>
+  </section>
 
-      <div class="features">
-        <div class="feature-card">
-          <h2>🎯 Mission</h2>
-          <p>Empowering students with concise, clear, and exam-focused NCERT notes.</p>
-        </div>
-        <div class="feature-card">
-          <h2>🚀 Vision</h2>
-          <p>To become India's most trusted free learning platform for school students.</p>
-        </div>
-        <div class="feature-card">
-          <h2>🤝 Our Team</h2>
-          <p>Built with passion by students, for students. We're constantly improving!</p>
-        </div>
+  <!-- FEATURES -->
+  <section class="features">
+    <div class="feature-card">
+      <h2>🎯 Our Mission</h2>
+      <p>To make NCERT-based study material accessible and simplified for every learner.</p>
+    </div>
+    <div class="feature-card">
+      <h2>🚀 Vision</h2>
+      <p>To empower every student in India with the right notes at the right time – free of cost!</p>
+    </div>
+    <div class="feature-card">
+      <h2>📚 Smart Learning</h2>
+      <p>We break down complex chapters into easy, digestible, revision-friendly notes.</p>
+    </div>
+  </section>
+
+  <!-- TEAM SECTION -->
+  <section class="team">
+    <h2>Meet the Creators</h2>
+    <div class="team-members">
+      <div class="member-card">
+        <img src="https://via.placeholder.com/100" alt="Dhananjay" />
+        <h3>Dhananjay Varshney</h3>
+        <p>Founder & Developer</p>
+      </div>
+      <div class="member-card">
+        <img src="https://via.placeholder.com/100" alt="Dev" />
+        <h3>Rahul Mehta</h3>
+        <p>Content Curator</p>
       </div>
     </div>
   </section>
 
-  <script src="about.js"></script>
+  <!-- TIMELINE -->
+  <section class="timeline">
+    <h2>Our Journey</h2>
+    <ul>
+      <li><strong>2024</strong> – Idea born during board prep hustle.</li>
+      <li><strong>Jan 2025</strong> – Site Launched with 10+ NCERT subjects.</li>
+      <li><strong>May 2025</strong> – Dark mode, chatbot & animations added.</li>
+    </ul>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 ExamBuddy | Made with ❤️ by Dhananjay</p>
+  </footer>
+
+  <script src="../js/about.js"></script>
 </body>
 </html>
