--- a/classes/class10.html
+++ b/classes/class10.html
@@ -88,8 +88,15 @@
             <li><a href="class10/science/metals-nonmetals.html">Metals and Non-metals</a></li>
             <li><a href="class10/science/carbon-compounds.html">Carbon and its Compounds</a></li>
             <li><a href="class10/science/life-processes.html">Life Processes</a></li>
+            <li><a href="class10/science/control-coordination.html">Control and Coordination</a></li>
+            <li><a href="class10/science/reproduction.html">Reproduction</a></li>
+            <li><a href="class10/science/heredity-evolution.html">Heredity and Evolution</a></li>
+            <li><a href="class10/science/light-reflection-refraction.html">Light: Reflection and Refraction</a></li>
+            <li><a href="class10/science/human-eye-colorful-world.html">Human Eye: Colorful World</a></li>
             <li><a href="class10/science/electricity.html">Electricity</a></li>
-            <li><a href="class10/science/view-all.html" class="view-all-link">View All Chapters <i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="class10/science/magnetic-effects-electric-current.html">Magnetic Effects of Electric Current</a></li>
+            <li><a href="class10/science/sourceofenergy.html">Sources of Energy</a></li>
+            <li><a href="class10/science/our-environment.html">Our Environment</a></li>
           </ul>
         </div>
 
