--- a/classes/class10/science/carbon-compounds.html
+++ b/classes/class10/science/carbon-compounds.html
@@ -53,7 +53,6 @@
               <li><a href="acids-bases-salts.html">Acids, Bases and Salts</a></li>
               <li><a href="metals-nonmetals.html">Metals and Non-metals</a></li>
               <li><a href="carbon-compounds.html" class="active">Carbon and its Compounds</a></li>
-              <li><a href="periodic-classification.html">Periodic Classification of Elements</a></li>
               <li><a href="life-processes.html">Life Processes</a></li>
               <li><a href="control-coordination.html">Control and Coordination</a></li>
               <li><a href="reproduction.html">How do Organisms Reproduce?</a></li>
@@ -430,8 +429,8 @@
             <a href="metals-nonmetals.html" class="prev-chapter">
               <i class="fas fa-arrow-left"></i> Previous Chapter: Metals and Non-metals
             </a>
-            <a href="periodic-classification.html" class="next-chapter">
-              Next Chapter: Periodic Classification of Elements <i class="fas fa-arrow-right"></i>
+            <a href="life-processes.html" class="next-chapter">
+              Next Chapter: Life Processes <i class="fas fa-arrow-right"></i>
             </a>
           </div>
         </main>
