Reverted branding back to BhaiyaKiClasses - Updated logo, footer, and localStorage keys across all pages

--- a/classes.html
+++ b/classes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>All Classes - BhaiyaKeNotes</title>
+  <title>All Classes - NOTES</title>
   </title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/classes.css">
@@ -15,7 +15,7 @@
     <nav id="navbar">
       <div class="container">
         <div class="logo">
-          <h1>Bhaiya<span>KeNotes</span></h1>
+          <h1>BhaiyaKiClasses</h1>
         </div>
         <div class="nav-toggle" id="navToggle">
           <i class="fas fa-bars"></i>
@@ -350,7 +350,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>Bhaiya<span>KiClasses</span></h3>
+          <h3>BhaiyaKiClasses</h3>
           <p>Comprehensive study materials for all NCERT classes with easy-to-understand notes, important questions, and detailed solutions.</p>
         </div>
         <div class="footer-section">
