--- a/classes/class10.html
+++ b/classes/class10.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Class 10 NCERT Notes - BhaiyaKeNotes</title>
+  <title>Class 10 NCERT Notes - NOTES</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/class.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
@@ -14,7 +14,7 @@
     <nav id="navbar">
       <div class="container">
         <div class="logo">
-          <h1>Bhaiya<span>KeNotes</span></h1>
+          <h1>BhaiyaKiClasses</h1>
         </div>
         <div class="nav-toggle" id="navToggle">
           <i class="fas fa-bars"></i>
@@ -66,14 +66,14 @@
             <li><a href="class10/maths/quadratic-equations.html">Quadratic Equations</a></li>
             <li><a href="class10/maths/arithmetic-progressions.html">Arithmetic Progressions</a></li>
             <li><a href="class10/maths/triangles.html">Triangles</a></li>
-            <li><a href="class10/maths/Coordinate-Geometry.html">Coordinate Geometry</a></li>
-            <li><a href="class10/maths/Introduction to Trigonometry.html">Introduction to Trigonometry</a></li>
-            <li><a href="class10/maths/Some Applications of Trigonometry.html">Some Applications of Trigonometry</a></li>
-            <li><a href="class10/maths/Circles.html">Circles</a></li>
-            <li><a href="class10/maths/Areas Related to Circles.html">Areas Related to Circles</a></li>
-            <li><a href="class10/maths/Surface Areas and Volumes.html">Surface Areas and Volumes</a></li>
-            <li><a href="class10/maths/Statistics.html">Statistics</a></li>
-            <li><a href="class10/maths/Probability.html">Probability</a></li>
+            <li><a href="class10/maths/coordinate-geometry.html">Coordinate Geometry</a></li>
+            <li><a href="class10/maths/introduction-to-trigonometry.html">Introduction to Trigonometry</a></li>
+            <li><a href="class10/maths/some-applications-of-trigonometry.html">Some Applications of Trigonometry</a></li>
+            <li><a href="class10/maths/circles.html">Circles</a></li>
+            <li><a href="class10/maths/areas-related-to-circles.html">Areas Related to Circles</a></li>
+            <li><a href="class10/maths/surface-areas-and-volumes.html">Surface Areas and Volumes</a></li>
+            <li><a href="class10/maths/statistics.html">Statistics</a></li>
+            <li><a href="class10/maths/probability.html">Probability</a></li>
           </ul>
         </div>
 
@@ -231,7 +231,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>Bhaiya<span>KiClasses</span></h3>
+          <h3>BhaiyaKiClasses</h3>
           <p>Comprehensive study materials for all NCERT classes with easy-to-understand notes, important questions, and detailed solutions.</p>
         </div>
         <div class="footer-section">
