--- a/classes/class10/science/chemical-reactions.html
+++ b/classes/class10/science/chemical-reactions.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Class 10 Science: Chemical Reactions and Equations - BhaiyaKeNotes</title>
+  <title>Class 10 Science: Chemical Reactions and Equations - NOTES</title>
   <link rel="stylesheet" href="../../../css/style.css">
   <link rel="stylesheet" href="../../../css/chapter.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
@@ -14,7 +14,7 @@
     <nav id="navbar">
       <div class="container">
         <div class="logo">
-          <h1>Bhaiya<span>KeNotes</span></h1>
+          <h1>NOTES</h1>
         </div>
         <div class="nav-toggle" id="navToggle">
           <i class="fas fa-bars"></i>
@@ -462,7 +462,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy; 2025 BhaiyaKeNotes. All rights reserved.</p>
+        <p>&copy; 2025 NOTES. All rights reserved.</p>
       </div>
     </div>
   </footer>
