--- a/classes/class10/science/our-environment.html
+++ b/classes/class10/science/our-environment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Class 10 Science: Our Environment - LearnNCERT</title>
+  <title>Class 10 Science: Our Environment - NOTES</title>
   <link rel="stylesheet" href="../../../css/style.css">
   <link rel="stylesheet" href="../../../css/chapter.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
@@ -484,7 +484,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy; 2025 LearnNCERT. All rights reserved.</p>
+        <p>&copy; 2025 NOTES. All rights reserved.</p>
       </div>
     </div>
   </footer>
