--- a/classes/class9.html
+++ b/classes/class9.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Class 9 NCERT Notes - BhaiyaKeNotes</title>
+  <title>Class 9 NCERT Notes - NOTES</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/class.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap">
@@ -14,7 +14,7 @@
     <nav id="navbar">
       <div class="container">
         <div class="logo">
-          <h1>Bhaiya<span>KeNotes</span></h1>
+          <h1>BhaiyaKiClasses</h1>
         </div>
         <div class="nav-toggle" id="navToggle">
           <i class="fas fa-bars"></i>
@@ -222,7 +222,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>Bhaiya<span>KiClasses</span></h3>
+          <h3>BhaiyaKiClasses</h3>
           <p>Comprehensive study materials for all NCERT classes with easy-to-understand notes, important questions, and detailed solutions.</p>
         </div>
         <div class="footer-section">
