Major update: Standardize format across all pages and restructure content

--- a/classes.html
+++ b/classes.html
@@ -15,7 +15,7 @@
     <nav id="navbar">
       <div class="container">
         <div class="logo">
-          <h1>BhaiyaKiClasses</h1>
+          <h1>BhaiyaKi<span>Classes</span></h1>
         </div>
         <div class="nav-toggle" id="navToggle">
           <i class="fas fa-bars"></i>
@@ -199,7 +199,7 @@
       
       <h2>Secondary School (9-10)</h2>
       <div class="class-grid">
-        <a href="classes/class9.html" class="class-tile">
+        <a href="classes/class9.html" class="class-tile highlight">
           <div class="class-number">9</div>
           <div class="class-info">
             <h3>Class 9</h3>
@@ -233,7 +233,7 @@
       
       <h2>Higher Secondary (11-12)</h2>
       <div class="class-grid">
-        <a href="classes/class11.html" class="class-tile">
+        <a href="classes/class11.html" class="class-tile highlight">
           <div class="class-number">11</div>
           <div class="class-info">
             <h3>Class 11</h3>
