--- a/classes/class10.html
+++ b/classes/class10.html
@@ -14,7 +14,7 @@
     <nav id="navbar">
       <div class="container">
         <div class="logo">
-          <h1>BhaiyaKiClasses</h1>
+          <h1>BhaiyaKi<span>Classes</span></h1>
         </div>
         <div class="nav-toggle" id="navToggle">
           <i class="fas fa-bars"></i>
@@ -92,11 +92,12 @@
             <li><a href="class10/science/reproduction.html">Reproduction</a></li>
             <li><a href="class10/science/heredity-evolution.html">Heredity and Evolution</a></li>
             <li><a href="class10/science/light-reflection-refraction.html">Light: Reflection and Refraction</a></li>
-            <li><a href="class10/science/human-eye-colorful-world.html">Human Eye: Colorful World</a></li>
+            <li><a href="class10/science/human-eye.html">Human Eye: Colorful World</a></li>
             <li><a href="class10/science/electricity.html">Electricity</a></li>
-            <li><a href="class10/science/magnetic-effects-electric-current.html">Magnetic Effects of Electric Current</a></li>
+            <li><a href="class10/science/magnetic-effects.html">Magnetic Effects of Electric Current</a></li>
             <li><a href="class10/science/sourceofenergy.html">Sources of Energy</a></li>
-            <li><a href="class10/science/our-environment.html">Our Environment</a></li>
+            <li><a href="class10/science/environment.html">Our Environment</a></li>
+            <li><a href="class10/science/natural-resources.html">Management of Natural Resources</a></li>
           </ul>
         </div>
 
