--- a/classes/class10/maths/polynomials.html
+++ b/classes/class10/maths/polynomials.html
@@ -16,7 +16,7 @@
         <nav id="navbar">
             <div class="container">
                 <div class="logo">
-                    <h1>Learn<span>NCERT</span></h1>
+                    <h1>BhaiyaKi<span>Classes</span></h1>
                 </div>
                 <div class="nav-toggle" id="navToggle">
                     <i class="fas fa-bars"></i>
@@ -268,10 +268,10 @@
                     </div>
 
                     <div class="chapter-nav">
-                        <a href="/class10/math/real-numbers" class="prev-chapter">
+                        <a href="real-numbers.html" class="prev-chapter">
                             <i class="fas fa-arrow-left"></i> Previous Chapter: Real Numbers
                         </a>
-                        <a href="/class10/math/pair-of-linear-equations" class="next-chapter">
+                        <a href="pair-of-linear-equations.html" class="next-chapter">
                             Next Chapter: Pair of Linear Equations <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -279,5 +279,48 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>BhaiyaKi<span>Classes</span></h3>
+                    <p>Comprehensive study materials for all NCERT classes with easy-to-understand notes, important questions, and detailed solutions.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="../../../index.html">Home</a></li>
+                        <li><a href="../../../classes.html">Classes</a></li>
+                        <li><a href="../../../about.html">About Us</a></li>
+                        <li><a href="../../../contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Popular Classes</h3>
+                    <ul>
+                        <li><a href="../../class9.html">Class 9</a></li>
+                        <li><a href="../../class10.html">Class 10</a></li>
+                        <li><a href="../../class11.html">Class 11</a></li>
+                        <li><a href="../../class12.html">Class 12</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Connect With Us</h3>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2025 BhaiyaKiClasses. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="../../../js/main.js"></script>
+    <script src="../../../js/theme.js"></script>
 </body>
 </html>
