--- a/index.html
+++ b/index.html
@@ -116,31 +116,31 @@
     <div class="container">
       <h2>Subjects</h2>
       <div class="subject-cards">
-        <a href="subjects/mathematics.html" class="subject-card">
+        <a href="#" class="subject-card">
           <div class="subject-icon">
             <i class="fas fa-calculator"></i>
           </div>
           <h3>Mathematics</h3>
         </a>
-        <a href="subjects/science.html" class="subject-card">
+        <a href="#" class="subject-card">
           <div class="subject-icon">
             <i class="fas fa-flask"></i>
           </div>
           <h3>Science</h3>
         </a>
-        <a href="subjects/social-science.html" class="subject-card">
+        <a href="#" class="subject-card">
           <div class="subject-icon">
             <i class="fas fa-globe-asia"></i>
           </div>
           <h3>Social Science</h3>
         </a>
-        <a href="subjects/english.html" class="subject-card">
+        <a href="#" class="subject-card">
           <div class="subject-icon">
             <i class="fas fa-book"></i>
           </div>
           <h3>English</h3>
         </a>
-        <a href="subjects/hindi.html" class="subject-card">
+        <a href="#" class="subject-card">
           <div class="subject-icon">
             <i class="fas fa-language"></i>
           </div>
