--- a/classes/class10/maths/some-applications-of-trigonometry.html
+++ b/classes/class10/maths/some-applications-of-trigonometry.html
@@ -16,7 +16,7 @@
         <nav id="navbar">
             <div class="container">
                 <div class="logo">
-                    <h1>Learn<span>NCERT</span></h1>
+                    <h1>BhaiyaKi<span>Classes</span></h1>
                 </div>
                 <div class="nav-toggle" id="navToggle">
                     <i class="fas fa-bars"></i>
@@ -283,51 +283,11 @@
             </div>
         </div>
     </div>
-
-    <section class="related-resources">
-        <div class="container">
-            <h2>Related Resources</h2>
-            <div class="resources-grid">
-                <a href="../practice-tests/trig-applications-test.html" class="resource-card">
-                    <div class="resource-icon">
-                        <i class="fas fa-clipboard-check"></i>
-                    </div>
-                    <h3>Practice Test</h3>
-                    <p>Test your understanding with chapter-specific questions</p>
-                </a>
-
-                <a href="../videos/trig-applications-explained.html" class="resource-card">
-                    <div class="resource-icon">
-                        <i class="fas fa-video"></i>
-                    </div>
-                    <h3>Video Explanations</h3>
-                    <p>Visual explanations of real-world trigonometry applications</p>
-                </a>
-
-                <a href="../worksheets/trig-applications-worksheet.html" class="resource-card">
-                    <div class="resource-icon">
-                        <i class="fas fa-file-alt"></i>
-                    </div>
-                    <h3>Worksheets</h3>
-                    <p>Practice sheets with real-world problems</p>
-                </a>
-
-                <a href="../important-questions/trig-applications-important.html" class="resource-card">
-                    <div class="resource-icon">
-                        <i class="fas fa-question-circle"></i>
-                    </div>
-                    <h3>Important Questions</h3>
-                    <p>Key questions likely to appear in exams</p>
-                </a>
-            </div>
-        </div>
-    </section>
-
     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Learn<span>NCERT</span></h3>
+                    <h3>BhaiyaKi<span>Classes</span></h3>
                     <p>Comprehensive study materials for all NCERT classes with easy-to-understand notes, important questions, and detailed solutions.</p>
                 </div>
                 <div class="footer-section">
@@ -356,15 +316,10 @@
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
-                    <p>Subscribe to our newsletter</p>
-                    <div class="newsletter">
-                        <input type="email" placeholder="Your email">
-                        <button type="submit">Subscribe</button>
-                    </div>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 NOTES. All rights reserved.</p>
+                <p>&copy; 2025 BhaiyaKiClasses. All rights reserved.</p>
             </div>
         </div>
     </footer>
