--- a/classes/class10/science/reproduction.html
+++ b/classes/class10/science/reproduction.html
@@ -329,7 +329,7 @@
               </div>
             </div>
             
-            <div class="load-more">
+            <div class="load-more" style="display: none;">
               <button class="btn btn-primary">Load More Questions</button>
             </div>
           </div>
@@ -440,7 +440,7 @@
                 </div>
               </div>
               
-              <div class="load-more">
+              <div class="load-more" style="display: none;">
                 <button class="btn btn-primary">Load More Solutions</button>
               </div>
             </div>
@@ -459,7 +459,7 @@
     </div>
   </div>
 
-  <section class="related-resources">
+  <section class="related-resources" style="display: none;">
     <div class="container">
       <h2>Related Resources</h2>
       <div class="resources-grid">
@@ -502,7 +502,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>Learn<span>NCERT</span></h3>
+          <h3>BhaiyaKi<span>Classes</span></h3>
           <p>Comprehensive study materials for all NCERT classes with easy-to-understand notes, important questions, and detailed solutions.</p>
         </div>
         <div class="footer-section">
@@ -531,15 +531,10 @@
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
           </div>
-          <p>Subscribe to our newsletter</p>
-          <div class="newsletter">
-            <input type="email" placeholder="Your email">
-            <button type="submit">Subscribe</button>
-          </div>
         </div>
       </div>
       <div class="copyright">
-        <p>&copy; 2025 NOTES. All rights reserved.</p>
+        <p>&copy; 2025 BhaiyaKiClasses. All rights reserved.</p>
       </div>
     </div>
   </footer>
