--- a/classes/class9.html
+++ b/classes/class9.html
@@ -14,7 +14,7 @@
     <nav id="navbar">
       <div class="container">
         <div class="logo">
-          <h1>BhaiyaKiClasses</h1>
+          <h1>BhaiyaKi<span>Classes</span></h1>
         </div>
         <div class="nav-toggle" id="navToggle">
           <i class="fas fa-bars"></i>
